fix: 修复源key重复导致的报错；修复导入源影片集合点击倒序时的报错